@@ -6,3 +6,5 @@ author: DanielPharos
 <i>Texture name check</i>. Some textures store the filename in the file itself. Enabling this option will make QuArK compare the stored texture name with the real filename to see if they match. Disabling this check can compromise texture integrity.
 
 <i>Empty texture name is always valid</i>. Enabling this option will make QuArK treat empty texture names as always correct when performing the above texture name check.
+
+<i>Unwrap texture coordinates</i>. This option unwraps texture coordinates by removing multiples of texture width/height from the U,V texture coordinates. This allows .bsp compilers to merge texture-info structures, reducing the .bsp file size. Additionally, you can have more brushes before hitting the maximum number of texture-info's in a .bsp file, meaning you can make bigger maps. (Only affects "Classic Quake", "Quark etp" and "Valve 220" texture formats.
