@@ -14,6 +14,9 @@ $Id$
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Unwrap texture coordinates on .map export. This allows .bsp compilers to
+          - merge texinfo structures, to avoid hitting the "too many surfaces" limit too soon.
+
 * [DanielPharos]: Added binary StL importing.
 
 * [DanielPharos]: Added experimental StL model importing (ASCII format only).
